--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,8 @@
             document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')
         </script>
         <link rel="stylesheet" href="<%= BASE_URL %>static/index.<%= VUE_APP_INDEX_CSS_HASH %>.css" />
+        <!-- 添加favicon图标 -->
+        <link rel="icon" href="<%= BASE_URL %>static/app-icon.png" />
     </head>
 
     <body>
